--- a/ToDoList/templates/ToDo/index.html
+++ b/ToDoList/templates/ToDo/index.html
@@ -1,9 +1,58 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-	<h1>To DO List</h1>
-</body>
-</html>
+{% extends "ToDo/layout.html" %}
+{% load static %}
+{% block style %}
+	<link rel="stylesheet" type="text/css" href="{% static 'ToDo/style.css' %}">
+{% endblock %}
+
+{% block content%}
+
+
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="card" id="list">
+					 <div class="card-body">
+					 	<h4 class="card-title"> Todo list</h4>
+					 	<!-- add Item to do list -->
+					 	<div class="add-items">
+					 		<form action="#" method="POST" role="form" class="form-inline" id="addItemsForm">
+								{% csrf_token %}
+								 <div class="input-group  todo-list-input">
+								 	 <input type="text" class="form-control input-lg mb-3" placeholder="What do you need to do today?">
+								 	  <span class="input-group-btn">
+								 	 	<button class="add btn btn-primary  font-weight-bold mb-3 ml-4">Add</button>
+								 	 </span>
+							 	 </div>   
+						 	</form>
+					 	</div>
+					 	<!-- add Item to do list End -->
+
+					 	<!-- All list -->
+					 	<div>
+					 		<ul id="allList">
+					 			<li>
+					 				<div class="form-check items">
+					 				  <label class="form-check-label"> 
+					 				  	<input class="checkbox" class="form-check-input" type="checkbox"> For what reason would it be advisable. 
+					 				  	<span class="deleteItem"><i class="icon-remove"></i></span> 
+					 				  </label> 
+					 				</div>
+					 				<div class="form-check items">
+					 				  <label class="form-check-label"> 
+					 				  	<input class="checkbox" class="form-check-input" type="checkbox"> For what reason would it be advisable. 
+					 				  	<span class="deleteItem"><i class="icon-remove"></i></span> 
+					 				  </label> 
+					 				</div>
+
+					 				 
+					 			</li>
+					 			
+					 		</ul>
+					 	</div>
+					 </div>
+				</div>
+				
+			</div>
+		</div>
+	</div>
+{% endblock%}
