--- a/ToDoList/templates/ToDo/index.html
+++ b/ToDoList/templates/ToDo/index.html
@@ -18,7 +18,7 @@
 					 		<form action="#" method="POST" role="form" class="form-inline" id="addItemsForm">
 								{% csrf_token %}
 								 <div class="input-group  todo-list-input">
-								 	 <input type="text" class="form-control input-lg mb-3" placeholder="What do you need to do today?">
+								 	 {{ ToDoForm.Task }}
 								 	  <span class="input-group-btn">
 								 	 	<button class="add btn btn-primary  font-weight-bold mb-3 ml-4">Add</button>
 								 	 </span>
@@ -30,21 +30,22 @@
 					 	<!-- All list -->
 					 	<div>
 					 		<ul id="allList">
-					 			<li>
+					 			<li class="list-group-item">
+					 				<div class="form-check items">
+					 				  <label class="form-check-label"> 
+					 				  	<input class="checkbox" class="form-check-input" type="checkbox"> For what reason would it be advisable. 
+					 				  	 
+					 				  </label> 
+					 				  <span class="deleteItem"><i class="icon-remove"></i></span>
+					 				</div> 
+					 			</li>
+					 			<li class="list-group-item">
 					 				<div class="form-check items">
 					 				  <label class="form-check-label"> 
 					 				  	<input class="checkbox" class="form-check-input" type="checkbox"> For what reason would it be advisable. 
 					 				  	<span class="deleteItem"><i class="icon-remove"></i></span> 
 					 				  </label> 
-					 				</div>
-					 				<div class="form-check items">
-					 				  <label class="form-check-label"> 
-					 				  	<input class="checkbox" class="form-check-input" type="checkbox"> For what reason would it be advisable. 
-					 				  	<span class="deleteItem"><i class="icon-remove"></i></span> 
-					 				  </label> 
-					 				</div>
-
-					 				 
+					 				</div> 
 					 			</li>
 					 			
 					 		</ul>
@@ -55,4 +56,6 @@
 			</div>
 		</div>
 	</div>
+
+	<script src="{% static 'ToDo/js/addTask.js' %}"></script>
 {% endblock%}
