--- a/ToDoList/templates/ToDo/index.html
+++ b/ToDoList/templates/ToDo/index.html
@@ -41,7 +41,7 @@
 						 				  	{% endif %}
 						 				  		 	{{ item.Task }} 
 						 				  </label> 
-						 				  <span class="deleteItem"><i class="icon-remove"></i></span>
+						 				  <a href="#" id="{{ item.id }}" class="deleteItem"><span ><i class="icon-remove"></i></span></a>
 						 				</div> 
 						 			</li>
 					 			{% empty %}
