--- a/ToDoList/templates/ToDo/layout.html
+++ b/ToDoList/templates/ToDo/layout.html
@@ -28,14 +28,9 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="#">All List<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/ToDoList">All List<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Completed List</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Uncompleted List</a>
-              </li>
+              
               
             </ul>
           </div>
