--- a/ToDoList/templates/ToDo/index.html
+++ b/ToDoList/templates/ToDo/index.html
@@ -57,5 +57,5 @@
 		</div>
 	</div>
 
-	<script src="{% static 'ToDo/js/addTask.js' %}"></script>
+	<script src="{% static 'ToDo/js/Task.js' %}"></script>
 {% endblock%}
